--- a/Style3.css
+++ b/Style3.css
@@ -24,9 +24,9 @@ body{background-size:cover; background-image: url(https://cdn.cloudflare.steamst
 .Chst4{height: 25px;width: 78px;display: block;font-size: 25px;color: White;font-family:Font2 ;}
 .Chst3{ height: 25px;width: 178px;display: block;font-size: 25px;color: White;font-family:Font2 ;}
 .Chst5{ height: 25px;width: 170px;display: block;font-size: 25px;color: White;font-family:Font2 ;}
-.icon{margin-top: -120px;margin-left: 150px;height: 60px;width: 280px;}
-.iconimg{height: 66px;width: 66px;}
-.icontext{text-decoration: none; margin-top: -60px;height: 55px;width: 226px;margin-left: 60px;display: block;font-size: 35px;color: rgba(0, 0, 0, 0.856);font-family:Font2 ; }
+.icon{margin-top: -120px;margin-left: 150px;height: 60px;width: 280px; color: white;}
+.iconimg{height: 66px;width: 66px; }
+.icontext{text-decoration: none; margin-top: -60px;height: 55px;width: 226px;margin-left: 60px;display: block;font-size: 35px;color: rgba(255, 255, 255, 0.856);font-family:Font2 ; }
 .DD1{display: none;  color: rgb(255, 0, 0);background-color: rgba(255, 255, 255, 0);text-align-last: center;margin-left: 100px;height: 50px;width: 1711px;border-radius: 15%;}
 .DD2{height: 350px;width: 500px;margin-left: 700px;}
 .DD2T{font-size: 25px; margin-top: 25px;margin-left: 120px;color: white;font-family: Font2;}
